--- a/doc/dissertation/dissertation.tex
+++ b/doc/dissertation/dissertation.tex
@@ -19,7 +19,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{empheq} % for emphasizing certain equations
-\usepackage{booktabs}
+\usepackage{booktabs} % for different table rules (lines)
 \usepackage{subcaption}
 \usepackage{algpseudocode}
 \usepackage{algorithm}
