--- a/doc/notes/notes.tex
+++ b/doc/notes/notes.tex
@@ -1,4 +1,5 @@
 \documentclass{mathnotes}
+\usepackage{booktabs} % for different table rules (lines)
 \usepackage{color}
 \usepackage{xcolor}
 \usepackage{alltt}
@@ -48,9 +49,9 @@
 %\subsection{The High-Order System}
 %  \input{../../dissertation/content/high_order/high_order_system}
 %===============================================================================
-\section{Implementation}  
+%\section{Implementation}  
 %===============================================================================
-\input{\contentdir/implementation/implementation}
+%\input{\contentdir/implementation/implementation}
 \input{\contentdir/implementation/nonlinear_iteration}
 %
 %===============================================================================
