--- a/doc/dissertation/nomenclature.tex
+++ b/doc/dissertation/nomenclature.tex
@@ -56,8 +56,7 @@ $f(\approximatescalarsolution^\timeindex)$ becomes $f^\timeindex$.
 
 \begin{mytable}{Abbreviations Used in Dissertation}{abbreviations}{l l}
 {\emph{Abbreviation} & \emph{Description}}
-CG    & continuous Galerkin\\
-CGFEM & continuous Galerkin finite element method\\
+CFEM  & continuous finite element method\\
 DMP   & discrete maximum principle\\
 EV    & entropy viscosity\\
 FCT   & flux-corrected transport\\
@@ -66,6 +65,7 @@ FV    & finite volume\\
 IVP   & initial value problem\\
 LED   & local extremum diminishing\\
 RK    & Runge-Kutta\\
+SS    & steady-state\\
 SSPRK & strong stability-preserving Runge-Kutta\\
 \end{mytable}
 
