finished theta FCT

--- a/doc/dissertation/content/fct/limited_flux_bounds_theta.tex
+++ b/doc/dissertation/content/fct/limited_flux_bounds_theta.tex
@@ -16,8 +16,8 @@
       - \solutionletter_i^\timeindex}{\timestepsize}
     +(1-\theta)\sumj \ssmatrixletter\ij^L \solutionletter_j^\timeindex
     +\theta\sumj \ssmatrixletter\ij^L \solutionletter_j^{\timeindex+1}
-    =(1-\theta)\ssrhsletter_i^\timeindex
-    +\theta \ssrhsletter_i^{\timeindex+1} \eqp
+    -(1-\theta)\ssrhsletter_i^\timeindex
+    -\theta \ssrhsletter_i^{\timeindex+1} \eqp
   \end{equation}
 \end{theorem}
 
