cancelled antidiffusive flux from Dirichlet node in Matlab code. Still need to do for c++ code

--- a/doc/dissertation/content/fct/limited_flux_bounds_steady_state.tex
+++ b/doc/dissertation/content/fct/limited_flux_bounds_steady_state.tex
@@ -3,7 +3,7 @@
    \eqref{eq:fct_steady_state},
    the following limited flux bounds $\limitedfluxbound_i^\pm$ correspond to the
    discrete maximum principle
-   $\DMPbound_i^+\le \solutionletter_i\le \DMPbound_i^-$:
+   $\DMPbound_i^-\le \solutionletter_i\le \DMPbound_i^+$:
    \begin{equation}
    \begin{split}
      \limitedfluxbound_i^\pm & \equiv \ssmatrixletter_{i,i}^L \DMPbound_i^\pm
