--- a/doc/dissertation/content/fct/limited_flux_bounds_theta.tex
+++ b/doc/dissertation/content/fct/limited_flux_bounds_theta.tex
@@ -10,7 +10,7 @@
   \end{equation}
   the following limited flux bounds $\limitedfluxbound_i^\pm$ correspond to the
   discrete maximum principle
-  $\DMPbound_i^+\le \solutionletter_i^{\timeindex+1}\le \DMPbound_i^-$:
+  $\DMPbound_i^-\le \solutionletter_i^{\timeindex+1}\le \DMPbound_i^+$:
   \begin{equation}
     \limitedfluxbound_i^\pm \equiv \lumpedmassentry\frac{\DMPbound_i^\pm
       - \solutionletter_i^\timeindex}{\timestepsize}
