--- a/doc/notes/notes.tex
+++ b/doc/notes/notes.tex
@@ -52,7 +52,10 @@
 %\section{Implementation}  
 %===============================================================================
 %\input{\contentdir/implementation/implementation}
-\input{\contentdir/implementation/nonlinear_iteration}
+%\subsection{Nonlinear Iteration}
+%\input{\contentdir/implementation/nonlinear_iteration}
+\subsection{Nonlinear Iteration for FCT}
+\input{\contentdir/implementation/nonlinear_iteration_fct}
 %
 %===============================================================================
 %\section*{References}
