--- a/doc/dissertation/content/implementation/nonlinear_iteration.tex
+++ b/doc/dissertation/content/implementation/nonlinear_iteration.tex
@@ -1,6 +1,3 @@
-%================================================================================
-\section{Nonlinear Solution}
-%================================================================================
 In this research, implicit and steady-state temporal discretizations are
 considered for the scalar case only. The examples given in this section thus
 correspond to the scalar case; however, the same methodology could be used
@@ -70,7 +67,7 @@ could use a zero vector as the initial guess.
 \caption{Defect Correction Algorithm}
 \label{alg:defect_correction}
 \begin{algorithmic}
-\State $\solutionvector^{(0)} = \solutionvector^{\text{guess}}$
+\State $\solutionvector^{(0)} \gets \solutionvector^{\text{guess}}$
 \State \texttt{converged} $\gets$ \texttt{FALSE}
 \For{$\ell\gets 0, \ell_{\text{max}}$}
   \State $\nonlinearmatrix^{(\ell)} \gets
@@ -86,8 +83,8 @@ could use a zero vector as the initial guess.
     \Break
   \EndIf
   \State $\Delta\solutionvector^{(\ell+1)}
-    = \sq{\dirichlet{\nonlinearmatrix}^{(\ell)}}^{-1}\ssres^{(\ell)}$
-  \State $\solutionvector^{(\ell+1)} = \solutionvector^{(\ell)}
+    \gets \sq{\dirichlet{\nonlinearmatrix}^{(\ell)}}^{-1}\ssres^{(\ell)}$
+  \State $\solutionvector^{(\ell+1)} \gets \solutionvector^{(\ell)}
     + \relaxationparameter\Delta\solutionvector^{(\ell+1)}$
 \EndFor
 \If{\Not \texttt{converged}}
