documentation and finished adding analytic DMP and cumulative antidiffusion FCT iteration

--- a/doc/dissertation/appendices.tex
+++ b/doc/dissertation/appendices.tex
@@ -4,6 +4,11 @@
 
 %------------------------------------------------------------------------------
 %\phantomsection
+%------------------------------------------------------------------------------
+\chapter{DERIVATION OF AN ANALYTIC LOCAL DISCRETE MAXIMUM PRINCIPLE FOR LINEAR
+  TRANSPORT\label{sec:analytic_dmp}}
+  \input{content/appendices/analytic_dmp}
+%------------------------------------------------------------------------------
 \chapter{DERIVATION OF THE ENTROPY FLUX FOR THE SHALLOW WATER EQUATIONS
 \label{sec:shallow_water_entropy_flux}}
   \input{content/appendices/appendix_shallow_water_entropy_flux}
