--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -197,6 +197,9 @@
 
 % FCT
 \newcommand{\DMPbound}{W}
+\newcommand{\analyticDMPbounds}{\DMPbound^{\text{analytic},\pm}}
+\newcommand{\analyticDMPupperbound}{\DMPbound^{\text{analytic},+}}
+\newcommand{\analyticDMPlowerbound}{\DMPbound^{\text{analytic},-}}
 \newcommand{\DMPboundsi}{\DMPbound^\pm_i}
 \newcommand{\limitedfluxbound}{Q}
 \newcommand{\limitedfluxboundsi}{\limitedfluxbound^\pm_i}
