--- a/doc/dissertation/dissertation.tex
+++ b/doc/dissertation/dissertation.tex
@@ -41,8 +41,11 @@
 %===============================================================================
 \begin{document}
 
-\renewcommand{\tamumanuscripttitle}{Solution of the Transport Equation Using
-   Entropy Viscosity and the Flux-Corrected Transport Algorithm}
+    Dissertation Proposal: 
+   
+\renewcommand{\tamumanuscripttitle}{Application of the Entropy Viscosity Method
+  and the Flux-Corrected Transport Algorithm to Scalar Transport Equations and
+  the Shallow Water Equations}
 \renewcommand{\tamupapertype}{Dissertation}
 \renewcommand{\tamufullname}{Joshua Edmund Hansel}
 \renewcommand{\tamudegree}{Doctor of Philosophy}
