--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -73,6 +73,8 @@
 %===============================================================================
 \subsection{The FCT Scheme\label{sec:fct_scheme_scalar}}
   \input{content/fct/fct_scheme_scalar}
+\subsection{FCT Solution Bounds\label{sec:fct_bounds}}
+  \input{content/fct/fct_bounds}
 \subsection{Limiting Coefficients\label{sec:limiting_coefficients_scalar}}
   \input{content/fct/limiting_coefficients}
   \input{content/fct/limited_flux_bounds_steady_state}
