renamed ConservationLawParameters to RunParameters and changed transport refinement options

--- a/doc/dissertation/content/preliminaries/shallowwater_characteristics.tex
+++ b/doc/dissertation/content/preliminaries/shallowwater_characteristics.tex
@@ -20,7 +20,7 @@ The spatial derivative of the flux function can be evaluated using chain rule, g
       \speedofsound^2-\velocityx^2 & 2\velocityx\end{array}} \eqc
 \end{equation}
 where $\jacobianx(\vectorsolution)$ is referred to as the Jacobian matrix,
-and $\speedofsound\equiv\sqrt{\gravity\speedofsound}$. The
+and $\speedofsound\equiv\sqrt{\gravity\height}$. The
 eigenvalues and corresponding eigenvectors of this matrix are
 \begin{equation}
   \eigenvalue_1(\vectorsolution) = \velocityx - \speedofsound \eqc \quad
