added overview of convergence testing

--- a/doc/dissertation/chapter3.tex
+++ b/doc/dissertation/chapter3.tex
@@ -7,6 +7,8 @@
 %===============================================================================
 \section{Scalar Transport\label{sec:transport_results}}
 %===============================================================================
+\subsection{Convergence Studies Overview\label{sec:convergence_overview}}
+  \input{content/results/transport/convergence_overview}
 \subsection{Void-to-Absorber Test Problem\label{sec:void_to_absorber}}
   \input{content/results/transport/void_to_absorber/description}
 \subsection{Skew Void-to-Absorber Test Problem\label{sec:skew_void_to_absorber}}
