--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -419,3 +419,9 @@
 \newcommand{\dirichlet}[1]{\tilde{#1}}
 
 \newcommand{\rowsum}[1]{#1\mathbf{1}}
+
+% convergence and error analysis
+\newcommand{\order}{\mathcal{O}}
+\newcommand{\err}{e}
+\newcommand{\dx}{\Delta x}
+
