--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -223,6 +223,7 @@
   \MakeUppercase{\correctionfluxletter}\ij}
 \newcommand{\F}{\correctionfluxmatrix}
 \newcommand{\LF}{\limitermatrix\cdot\correctionfluxmatrix}
+\newcommand{\transformationmatrix}{\mathbf{T}}
 
 % radiation transport
 \newcommand{\angularflux}{\psi}
